--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "core-js": "^3.8.3",
+    "element-plus": "^2.1.7",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0"
   },
